...
class FirebaseAuthUiClient(
    private val context: Context
) : AuthUiClient {
    suspend fun register(
        displayName: String,
        email: String,
        password: String,
    ): SignInResult = suspendCoroutine { continuation ->
        val auth = FirebaseAuth.getInstance()
        auth.createUserWithEmailAndPassword(email, password)
            .addOnSuccessListener {
                Log.d("FIREBASE_AUTH", "Register successful")
                val user = auth.currentUser
...
