package com.mateusz113.financemanager.util

object TestTags {
    const val PAYMENT_LISTING_INFO = "PAYMENT_LISTING_INFO"
    const val SCROLLABLE_COLUMN = "SCROLLABLE_COLUMN"
    const val SWIPE_REFRESH_INDICATOR = "SWIPE_REFRESH_INDICATOR"
    const val PHOTO = "PHOTO"
    const val PHOTO_WRAPPER = "PHOTO_WRAPPER"
    const val LAZY_COLUMN = "LAZY_COLUMN"
    const val DROPDOWN_MENU = "DROPDOWN_MENU"
    const val SURFACE = "SURFACE"
}
